crates/test-ui/ui/thread_kind_traits_unimplementable2.stderr
error[E0277]: the trait bound `CustomStruct: objc2::top_level_traits::private::SealedAnyThread` is not satisfied
 --> ui/thread_kind_traits_unimplementable2.rs
  |
  | unsafe impl AnyThread for CustomStruct {}
  |                           ^^^^^^^^^^^^ unsatisfied trait bound
  |
help: the trait `ClassType` is not implemented for `CustomStruct`
 --> ui/thread_kind_traits_unimplementable2.rs
  |
  | struct CustomStruct;
  | ^^^^^^^^^^^^^^^^^^^
  = help: the following other types implement trait `ClassType`:
            NSObject
            __NSProxy
  = note: required for `CustomStruct` to implement `objc2::top_level_traits::private::SealedAnyThread`
note: required by a bound in `AllocAnyThread`
 --> $WORKSPACE/crates/objc2/src/top_level_traits.rs
  |
  | pub unsafe trait AnyThread: private::SealedAnyThread {
  |                             ^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `AnyThread`
  = note: `AnyThread` is a "sealed trait", because to implement it you also need to implement `objc2::top_level_traits::private::SealedAnyThread`, which is not accessible; this is usually done to force you to use one of the provided types that already implement it
  = help: the following types implement the trait:
            objc2::runtime::ProtocolObject<P>
            T

error[E0277]: the trait bound `CustomStruct: objc2::top_level_traits::private::SealedMainThreadOnly` is not satisfied
 --> ui/thread_kind_traits_unimplementable2.rs
  |
  | unsafe impl MainThreadOnly for CustomStruct {}
  |                                ^^^^^^^^^^^^ unsatisfied trait bound
  |
help: the trait `ClassType` is not implemented for `CustomStruct`
 --> ui/thread_kind_traits_unimplementable2.rs
  |
  | struct CustomStruct;
  | ^^^^^^^^^^^^^^^^^^^
  = help: the following other types implement trait `ClassType`:
            NSObject
            __NSProxy
  = note: required for `CustomStruct` to implement `objc2::top_level_traits::private::SealedMainThreadOnly`
note: required by a bound in `MainThreadOnly`
 --> $WORKSPACE/crates/objc2/src/top_level_traits.rs
  |
  | pub unsafe trait MainThreadOnly: private::SealedMainThreadOnly {
  |                                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `MainThreadOnly`
  = note: `MainThreadOnly` is a "sealed trait", because to implement it you also need to implement `objc2::top_level_traits::private::SealedMainThreadOnly`, which is not accessible; this is usually done to force you to use one of the provided types that already implement it
  = help: the following types implement the trait:
            objc2::runtime::ProtocolObject<P>
            T
